# AESOP

./: .env-example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: logging.py  main.py  tasks.py
backend/app/agents/: graph.py  orchestrator_graph.py  state.py  test_run.py
backend/app/agents/chat/: __init__.py  agent.py  node.py  prompts.py
backend/app/agents/context_qa/: __init__.py  agent.py  node.py
backend/app/agents/critic/: README.md  agent.py  memory.py  node.py  prompts.py  rubric.py  schemas.py
backend/app/agents/intent/: __init__.py  agent.py  node.py  prompts.py
backend/app/agents/router/: __init__.py  agent.py  node.py  prompts.py
backend/app/agents/scout/: agent.py  prompt.py  prompts.py  tools.py
backend/app/agents/synthesizer/: agent.py  prompts.py  schemas.py  utils.py
backend/app/agents/title/: __init__.py  agent.py
backend/app/agents/utility/: __init__.py  agent.py  node.py
backend/app/api/: __init__.py  conversations.py
backend/app/embeddings/: bedrock.py
backend/app/schemas/: api.py  conversation.py  database.py  session.py
backend/app/services/: chat_memory.py  database.py  session.py
backend/db/migrations/: 001_create_critic_memory.sql  002_clean_and_create_session_tables.sql
backend/tests/: __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_api_v2.py  test_hybrid_session.py
backend/tests/unit/: __init__.py  test_database_service.py
documentation/: Project_Planning.MD
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
(+19 files in other folders)
